--- a/seaFood/css/octopus/header.css
+++ b/seaFood/css/octopus/header.css
@@ -1,4 +1,4 @@
-.crab1 h1 {
+.shrimp1 h1 {
     display: flex;
     font-size: 22px;
     justify-content: center;
@@ -19,7 +19,7 @@
         font-weight: 600;
     }
     
-    .crabType1 {
+    .shrimpType1 {
         display: flex;
         font-size: 18px;
         justify-content: center;
@@ -34,7 +34,7 @@
         padding-bottom: 50px;
     }
     
-    .crabType1 h1 {
+    .shrimpType1 h1 {
         display: flex;
         font-size: 20px;
         justify-content: center;
@@ -42,7 +42,7 @@
         width: 100vw;
     }
     
-    .crabType1 p {
+    .shrimpType1 p {
         display: flex;
         font-size: 18px;
         justify-content: center;
@@ -52,7 +52,7 @@
         padding-top: 20px;
     }
     
-    .crabType2 {
+    .shrimpType2 {
         display: flex;
         font-size: 18px;
         justify-content: center;
@@ -67,7 +67,7 @@
         padding-top: 20px;
     }
     
-    .crabType2 h1 {
+    .shrimpType2 h1 {
         display: flex;
         font-size: 20px;
         justify-content: center;
@@ -75,7 +75,7 @@
         width: 100vw;
     }
     
-    .crabType2 p {
+    .shrimpType2 p {
         display: flex;
         font-size: 18px;
         justify-content: center;
@@ -85,74 +85,7 @@
         padding-top: 20px;
     }
     
-    .crabType3 {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        top: 0;
-        width: 100vw;
-        height: auto;
-        flex-direction: column;
-        text-align: center;
-        background-color: #f1f1f1;
-        padding-bottom: 50px;
-        padding-top: 20px;
-    }
-    
-    .crabType3 h1 {
-        display: flex;
-        font-size: 20px;
-        justify-content: center;
-        text-decoration: underline;
-        width: 100vw;
-    }
-    
-    .crabType3 p {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        width: 100vw;
-        padding-top: 20px;
-    }
-    
-    .crabType4 {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        top: 0;
-        width: 100vw;
-        height: auto;
-        flex-direction: column;
-        text-align: center;
-        padding-bottom: 50px;
-        padding-top: 20px;
-    }
-    
-    .crabType4 h1 {
-        display: flex;
-        font-size: 20px;
-        justify-content: center;
-        text-decoration: underline;
-        width: 100vw;
-    }
-    
-    .crabType4 p {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        width: 100vw;
-        padding-top: 20px;
-    }
-    
-    .crabType5 {
+    .shrimpType3 {
         display: flex;
         font-size: 18px;
         justify-content: center;
@@ -168,7 +101,7 @@
         padding-top: 20px;
     }
     
-    .crabType5 h1 {
+    .shrimpType3 h1 {
         display: flex;
         font-size: 20px;
         justify-content: center;
@@ -176,7 +109,7 @@
         width: 100vw;
     }
     
-    .crabType5 p {
+    .shrimpType3 p {
         display: flex;
         font-size: 18px;
         justify-content: center;
@@ -186,7 +119,7 @@
         padding-top: 20px;
     }
     
-    .crabType6 {
+    .shrimpType4 {
         display: flex;
         font-size: 18px;
         justify-content: center;
@@ -201,7 +134,7 @@
         padding-top: 20px;
     }
     
-    .crabType6 h1 {
+    .shrimpType4 h1 {
         display: flex;
         font-size: 20px;
         justify-content: center;
@@ -209,7 +142,7 @@
         width: 100vw;
     }
     
-    .crabType6 p {
+    .shrimpType4 p {
         display: flex;
         font-size: 18px;
         justify-content: center;
@@ -219,7 +152,74 @@
         padding-top: 20px;
     }
     
-    .crabType7 {
+    .shrimpType5 {
+        display: flex;
+        font-size: 18px;
+        justify-content: center;
+        text-decoration: none;
+        position: relative;
+        top: 0;
+        width: 100vw;
+        height: auto;
+        flex-direction: column;
+        text-align: center;
+        background-color: #f1f1f1;
+        padding-bottom: 50px;
+        padding-top: 20px;
+    }
+    
+    .shrimpType5 h1 {
+        display: flex;
+        font-size: 20px;
+        justify-content: center;
+        text-decoration: underline;
+        width: 100vw;
+    }
+    
+    .shrimpType5 p {
+        display: flex;
+        font-size: 18px;
+        justify-content: center;
+        text-decoration: none;
+        position: relative;
+        width: 100vw;
+        padding-top: 20px;
+    }
+    
+    .shrimpType6 {
+        display: flex;
+        font-size: 18px;
+        justify-content: center;
+        text-decoration: none;
+        position: relative;
+        top: 0;
+        width: 100vw;
+        height: auto;
+        flex-direction: column;
+        text-align: center;
+        padding-bottom: 50px;
+        padding-top: 20px;
+    }
+    
+    .shrimpType6 h1 {
+        display: flex;
+        font-size: 20px;
+        justify-content: center;
+        text-decoration: underline;
+        width: 100vw;
+    }
+    
+    .shrimpType6 p {
+        display: flex;
+        font-size: 18px;
+        justify-content: center;
+        text-decoration: none;
+        position: relative;
+        width: 100vw;
+        padding-top: 20px;
+    }
+    
+    .shrimpType7 {
         display: flex;
         font-size: 18px;
         justify-content: center;
@@ -235,7 +235,7 @@
         background-color: #f1f1f1;
     }
     
-    .crabType7 h1 {
+    .shrimpType7 h1 {
         display: flex;
         font-size: 20px;
         justify-content: center;
@@ -243,7 +243,7 @@
         width: 100vw;
     }
     
-    .crabType7 p {
+    .shrimpType7 p {
         display: flex;
         font-size: 18px;
         justify-content: center;
@@ -253,7 +253,7 @@
         padding-top: 20px;
     }
 
-    .crabType8 {
+    .shrimpType8 {
         display: flex;
         font-size: 18px;
         justify-content: center;
@@ -268,7 +268,7 @@
         padding-top: 20px;
     }
     
-    .crabType8 h1 {
+    .shrimpType8 h1 {
         display: flex;
         font-size: 20px;
         justify-content: center;
@@ -276,7 +276,7 @@
         width: 100vw;
     }
     
-    .crabType8 p {
+    .shrimpType8 p {
         display: flex;
         font-size: 18px;
         justify-content: center;
@@ -286,7 +286,7 @@
         padding-top: 20px;
     }
 
-    .crabType9 {
+    .shrimpType9 {
         display: flex;
         font-size: 18px;
         justify-content: center;
@@ -302,7 +302,7 @@
         background-color: #f1f1f1;
     }
     
-    .crabType9 h1 {
+    .shrimpType9 h1 {
         display: flex;
         font-size: 20px;
         justify-content: center;
@@ -310,7 +310,7 @@
         width: 100vw;
     }
     
-    .crabType9 p {
+    .shrimpType9 p {
         display: flex;
         font-size: 18px;
         justify-content: center;
@@ -320,7 +320,7 @@
         padding-top: 20px;
     }
 
-    .crabType10 {
+    .shrimpType10 {
         display: flex;
         font-size: 18px;
         justify-content: center;
@@ -335,7 +335,7 @@
         padding-top: 20px;
     }
     
-    .crabType10 h1 {
+    .shrimpType10 h1 {
         display: flex;
         font-size: 20px;
         justify-content: center;
@@ -343,7 +343,242 @@
         width: 100vw;
     }
     
-    .crabType10 p {
+    .shrimpType10 p {
+        display: flex;
+        font-size: 18px;
+        justify-content: center;
+        text-decoration: none;
+        position: relative;
+        width: 100vw;
+        padding-top: 20px;
+    }
+
+    .shrimpType11 {
+        display: flex;
+        font-size: 18px;
+        justify-content: center;
+        text-decoration: none;
+        position: relative;
+        top: 0;
+        width: 100vw;
+        height: auto;
+        flex-direction: column;
+        text-align: center;
+        padding-bottom: 50px;
+        padding-top: 20px;
+        background-color: #f1f1f1;
+    }
+    
+    .shrimpType11 h1 {
+        display: flex;
+        font-size: 20px;
+        justify-content: center;
+        text-decoration: underline;
+        width: 100vw;
+    }
+    
+    .shrimpType11 p {
+        display: flex;
+        font-size: 18px;
+        justify-content: center;
+        text-decoration: none;
+        position: relative;
+        width: 100vw;
+        padding-top: 20px;
+    }
+
+    .shrimpType12 {
+        display: flex;
+        font-size: 18px;
+        justify-content: center;
+        text-decoration: none;
+        position: relative;
+        top: 0;
+        width: 100vw;
+        height: auto;
+        flex-direction: column;
+        text-align: center;
+        padding-bottom: 50px;
+        padding-top: 20px;
+    }
+    
+    .shrimpType12 h1 {
+        display: flex;
+        font-size: 20px;
+        justify-content: center;
+        text-decoration: underline;
+        width: 100vw;
+    }
+    
+    .shrimpType12 p {
+        display: flex;
+        font-size: 18px;
+        justify-content: center;
+        text-decoration: none;
+        position: relative;
+        width: 100vw;
+        padding-top: 20px;
+    }
+
+    .shrimpType13 {
+        display: flex;
+        font-size: 18px;
+        justify-content: center;
+        text-decoration: none;
+        position: relative;
+        top: 0;
+        width: 100vw;
+        height: auto;
+        flex-direction: column;
+        text-align: center;
+        padding-bottom: 50px;
+        padding-top: 20px;
+        background-color: #f1f1f1;
+    }
+    
+    .shrimpType13 h1 {
+        display: flex;
+        font-size: 20px;
+        justify-content: center;
+        text-decoration: underline;
+        width: 100vw;
+    }
+    
+    .shrimpType13 p {
+        display: flex;
+        font-size: 18px;
+        justify-content: center;
+        text-decoration: none;
+        position: relative;
+        width: 100vw;
+        padding-top: 20px;
+    }
+
+    .shrimpType14 {
+        display: flex;
+        font-size: 18px;
+        justify-content: center;
+        text-decoration: none;
+        position: relative;
+        top: 0;
+        width: 100vw;
+        height: auto;
+        flex-direction: column;
+        text-align: center;
+        padding-bottom: 50px;
+        padding-top: 20px;
+    }
+    
+    .shrimpType14 h1 {
+        display: flex;
+        font-size: 20px;
+        justify-content: center;
+        text-decoration: underline;
+        width: 100vw;
+    }
+    
+    .shrimpType14 p {
+        display: flex;
+        font-size: 18px;
+        justify-content: center;
+        text-decoration: none;
+        position: relative;
+        width: 100vw;
+        padding-top: 20px;
+    }
+
+    .shrimpType15 {
+        display: flex;
+        font-size: 18px;
+        justify-content: center;
+        text-decoration: none;
+        position: relative;
+        top: 0;
+        width: 100vw;
+        height: auto;
+        flex-direction: column;
+        text-align: center;
+        padding-bottom: 50px;
+        padding-top: 20px;
+        background-color: #f1f1f1;
+    }
+    
+    .shrimpType15 h1 {
+        display: flex;
+        font-size: 20px;
+        justify-content: center;
+        text-decoration: underline;
+        width: 100vw;
+    }
+    
+    .shrimpType15 p {
+        display: flex;
+        font-size: 18px;
+        justify-content: center;
+        text-decoration: none;
+        position: relative;
+        width: 100vw;
+        padding-top: 20px;
+    }
+
+    .shrimpType16 {
+        display: flex;
+        font-size: 18px;
+        justify-content: center;
+        text-decoration: none;
+        position: relative;
+        top: 0;
+        width: 100vw;
+        height: auto;
+        flex-direction: column;
+        text-align: center;
+        padding-bottom: 50px;
+        padding-top: 20px;
+    }
+    
+    .shrimpType16 h1 {
+        display: flex;
+        font-size: 20px;
+        justify-content: center;
+        text-decoration: underline;
+        width: 100vw;
+    }
+    
+    .shrimpType16 p {
+        display: flex;
+        font-size: 18px;
+        justify-content: center;
+        text-decoration: none;
+        position: relative;
+        width: 100vw;
+        padding-top: 20px;
+    }
+
+    .shrimpType17 {
+        display: flex;
+        font-size: 18px;
+        justify-content: center;
+        text-decoration: none;
+        position: relative;
+        top: 0;
+        width: 100vw;
+        height: auto;
+        flex-direction: column;
+        text-align: center;
+        padding-bottom: 50px;
+        padding-top: 20px;
+        background-color: #f1f1f1;
+    }
+    
+    .shrimpType17 h1 {
+        display: flex;
+        font-size: 20px;
+        justify-content: center;
+        text-decoration: underline;
+        width: 100vw;
+    }
+    
+    .shrimpType17 p {
         display: flex;
         font-size: 18px;
         justify-content: center;
